# erudition

./: Cargo.toml  README.md  typos.toml
.cargo/: config.toml
.github/workflows/: build.yml  clippy.yml  rustdoc.yml  rustfmt.yml  tests.yml
app/: Cargo.toml
app/src/: home.rs  main.rs  questions.rs  router.rs
data/: LICENCES.md  countryInfo.tsv
dev/: Cargo.toml
dev/src/: cli.rs  main.rs  runner.rs  tmux.rs
lib/: Cargo.toml
lib/src/: lib.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
server/: Cargo.toml  todo.md
server/src/: cli.rs  dir.rs  initialise.rs  item.rs  main.rs  routes.rs  server.rs  state.rs  storage.rs  tests.rs
src/: main.rs
