[workspace]
resolver = "3"
members = ["app", "dev", "lib", "proc-macro", "server"]

[workspace.dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
dioxus = { version = "0.7.3", features = ["router"] }
dirs = "6.0.0"
erudition-lib = { version = "0.1.0", path = "./lib" }
erudition-proc-macro = { version = "0.1.0", path = "./proc-macro" }
getrandom = { version = "0.4.2" }
postcard = { version = "1.1.3", features = ["alloc"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
syn = "2.0.117"
time = "0.3.47"
