[package]
name = "erudition-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
serde.workspace = true
postcard = { version = "1.1.3", features = ["alloc"] }
time = "0.3.47"
erudition-lib = { version = "0.1.0", path = "../lib" }
actix-cors = "0.7.1"
argon2 = "0.5.3"
rand = "0.10.0"

[dev-dependencies]
serde_json = "1.0.149"
