[package]
name = "erudition-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
argon2.workspace = true
clap.workspace = true
color-eyre.workspace = true
dirs.workspace = true
erudition-lib.workspace = true
erudition-proc-macro.workspace = true
getrandom.workspace = true
postcard.workspace = true
serde.workspace = true
time.workspace = true

[dev-dependencies]
serde_json = "1.0.149"

[lints]
workspace = true
